Eliminated PMD error messages.